# DevloperVoiceToPrompt

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/: copilot-instructions.md  release.yml
.github/workflows/: ci.yml  release.yml
doc/: ai-plugin-architecture.md  speech-plugin-architecture.md
scripts/: build-both.mjs  bundle-bridge.mjs  download-node.mjs
src/: App.svelte  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/scripts/: copilot-bridge.mjs
src-tauri/src/: ai_http.rs  commands.rs  copilot.rs  lib.rs  logging.rs  main.rs  mcp.rs  settings.rs  tray.rs  whisper.rs  whisper_cli.rs  window_manager.rs
src-tauri/src/commands/: logs_cmd.rs  mcp_cmd.rs  mod.rs  models.rs  ollama_cmd.rs  openai_cmd.rs  settings_cmd.rs  storage_cmd.rs  whisper_cmd.rs  window.rs
src-tauri/src/copilot/: bridge.rs  mod.rs  paths.rs  types.rs
src-tauri/src/speech/: apple.rs  mod.rs  windows.rs
src/components/: About.svelte  Help.svelte  MicButton.svelte  Popup.svelte  Settings.svelte  ShortcutRecorder.svelte
src/components/popup/: AboutOverlay.svelte  CopilotEnhanceBar.svelte  DictationEditor.svelte  EnhanceBar.svelte  HelpOverlay.svelte  HistoryPanel.svelte  SpeechTracePanel.svelte  TemplatesPanel.svelte  (+1 more)
src/lib/: DictationEditorController.ts  audioLevelMeter.ts  constants.ts  copilotSelection.ts  copilotStore.ts  dictationEditorState.ts  enhancerDefaults.ts  enhancerMigration.ts  enhancerTemplateStore.ts  historyStore.ts  interimCommitManager.ts  ollamaStore.ts  openaiStore.ts  settingsStore.ts  speechConstants.ts  speechService.ts  speechTraceStore.ts  tauriInvoke.ts  templateStore.ts  usageStore.ts  useKeyboardShortcuts.ts
src/styles/: base.css  popup.css  settings.css  themes.css
src/test/: aiRegistry.test.ts  aiService.test.ts  applePlugin.test.ts  constants.test.ts  constantsExtended.test.ts  copilotAIProvider.test.ts  copilotSelection.test.ts  copilotStore.test.ts  dictationEditorController.test.ts  dictationEditorState.test.ts  enhancerMigration.test.ts  enhancerMigrationUnit.test.ts  enhancerTemplateStore.test.ts  historyStore.test.ts  historyStoreCrud.test.ts  interimCommitManager.test.ts  keyboardShortcuts.test.ts  nativeProviderProxy.test.ts  ollamaProvider.test.ts  ollamaStore.test.ts  openaiProvider.test.ts  openaiStore.test.ts  popupTextModel.test.ts  providerConfigMigration.test.ts  registry.test.ts  settingsDefaults.test.ts  setup.ts  speechConstants.test.ts  speechService.test.ts  speechTraceStore.test.ts  storeRecovery.test.ts  tauriInvoke.test.ts  templateStore.test.ts  usageMigration.test.ts  usageStore.test.ts  usageStoreCrud.test.ts  whisperHelpers.test.ts  windowsPlugin.test.ts
(+46 files in other folders)
