[package]
name = "DeveloperVoiceToPrompt"
version = "0.1.0"
description = "Azure Speech to Text dictation tool"
authors = ["you"]
edition = "2021"

[lib]
name = "developer_voice_to_prompt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.13"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
base64 = "0.22"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "net", "process", "io-util", "time"] }
